package com.smartcommunity.service;

public interface RepairService {
    String module();
}
